# r7cli

./: .gitignore  CLAUDE.md  PRIVACY.md  README.md  SECURITY.md  agents.py  ask.py  cis.py  cli_group.py  client.py  compliance.py  config.py  extensions.py  helpers.py  jobs.py  main.py  matrix.py  models.py  output.py  parquet_filter.py  product-market.mappings  progress.py  pyproject.toml  security_checklist.py  status.py
.hypothesis/constants/: 1d17fe18708d4c6d  30da7839e49da4d1  365d9f5db287fd01  38c3a96f3561e986  3ad3bd26eb57d4b4  4603ca2a61a4daf5  51e0cc9203c0e62c  58d205b0e2c3f787  5ccd3e0ccb946e41  69115de631beeae1  735056ce58bb2519  7583bbeb59c842ab  90111bf001abc6e2  a26b84356d5b4c33  a7037cb73e9502a8  aa12e74f0dd22fb7  ac3c74bbd8ec6930  b4b25dd7f5f25d5c  bf615d1c0bcb6068  d50b383ccc1a7aed  e8bd5f349078ff09  fc80b4fdf75b32a0
.hypothesis/examples/04e6b3400353b141/: 95d4163788437a02  c0461542bbe42933
.hypothesis/examples/95d4163788437a02/: 2f1637ca3a2d5b97
.kiro/hooks/: auto-git-commit.kiro.hook  reinstall-r7-cli.kiro.hook  update-docs-reminder.kiro.hook
.kiro/specs/r7-cli/: .config.kiro  (+3 more)
.kiro/steering/: product.md  structure.md  tech.md
docs/: PRD-cyber-matrix.md  REFERENCE.md
r7_cli.egg-info/: PKG-INFO
solutions/: appsec.py  asm.py  cnapp.py  drp.py  mcp.py  platform.py  siem.py  soar.py  stub.py  vm.py
src/r7cli/: __init__.py  agents.py  cache.py  cis.py  client.py  config.py  controls.csv  dev.py  helpers.py  jobs.py  log.py  main.py  matrix.py  output.py  status.py
tests/: conftest.py  test_download_mkdir.py  test_helpers.py  test_output.py
(+32 files in other folders)
